<resources>
    <string name="app_name">聚不锈</string>
    <string name="home_page">工作</string>
    <string name="message">资讯</string>
    <string name="contact">商城</string>
    <string name="mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_str">首页</string>
    <string name="news">精品</string>
    <string name="shop">商城</string>
    <string name="messages">发现</string>
    <string name="company_name">厦门钢鲸科技股份有限公司</string>
    <string name="username"> 请输入手机号码</string>
    <string name="paw">请输入密码</string>
    <string name="register">快速注册</string>
    <string name="forget_txt">忘记密码</string>
    <string name="login">登录</string>
    <string name="phone">请输入手机号码</string>
    <string name="verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_paw">请输入密码</string>
    <string name="agree">我已阅读并同意聚不锈使用协议和隐私政策</string>
    <string name="register_txt">注册</string>
    <string name="next">下一步</string>
    <string name="new_paw">请输入新密码</string>
    <string name="confirm_new_paw">请再次输入新密码</string>
    <string name="back">返回</string>
    <string name="news_search_txt">资讯搜索</string>
    <string name="search_shop">搜索现货、加工商、供应商</string>
    <string name="find_good">找现货</string>
    <string name="find_sup">找供应商</string>
    <string name="find_conx">找加工商</string>
    <string name="today_goods">今日现货</string>
    <string name="teststr">不锈钢制品</string>
    <string name="price">¥500</string>
    <string name="add_people">添加员工</string>
    <string name="add_partment">添加部门</string>
    <string name="cancel">取消</string>
    <string name="select_operate">请选择需要批量操作的人员</string>
    <string name="cponfirm">确定</string>
    <string name="marst_input_str">必填</string>
    <string name="partment_name">部门名称</string>
    <string name="name">姓名</string>
    <string name="phonestr">手机号</string>
    <string name="jobname">职位</string>
    <string name="orangeemail">企业邮箱</string>
    <string name="select_input">选填</string>
    <string name="part">部门</string>
    <string name="des">提交后手机号码自动注册为聚不锈用户，默认密码为手机后六位</string>
    <string name="height_manager">高管模式</string>
    <string name="desc">开启后，该成员可指派订单到该部门某个成员</string>
    <string name="please_select_partment">请选择部门</string>
    <string name="partment_setting">部门设置</string>
    <string name="mine_word">我的简历</string>
    <string name="mine_job">我的求职</string>
    <string name="mine_hr">我要招人</string>
    <string name="hot_rec_str">热门推荐</string>
    <string name="apply_btn">申请</string>
</resources>
