<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhengdong.base.Section.Login.Controller.LoginAC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/four_eight"
        android:paddingTop="@dimen/ten_dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/login_ic"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_eight"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/four_eight"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/login_username_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/four_four_dp"
                android:background="@null"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/curse_bg"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/username"
                android:textColorHint="#FF989898"
                android:textSize="@dimen/fiften_sp"/>
            <LinearLayout
                android:id="@+id/login_delete_lay"
                android:layout_width="@dimen/thirty_five"
                android:layout_height="@dimen/thirty_five"
                android:gravity="center_horizontal|center_vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/five_dp"
                    android:src="@drawable/login_del"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="@color/line_bg"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_eight"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/thirty_dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/login_paw_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/four_four_dp"
                android:background="@null"
                android:cursorVisible="true"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/curse_bg"
                android:hint="@string/paw"
                android:textColorHint="#FF989898"
                android:textSize="@dimen/fiften_sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="#D8D8D8"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp">
            <TextView
                android:id="@+id/login_register_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#FF656565"
                android:textSize="@dimen/seventeen_sp"/>
            <TextView
                android:id="@+id/login_forget_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/forget_txt"
                android:textColor="#FF656565"
                android:textSize="@dimen/seventeen_sp"/>
        </RelativeLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_four_dp"
            android:background="@drawable/table_shape_button_radio"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:text="@string/login"
            android:textSize="@dimen/twenty_spp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_five">
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
