<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhengdong.base.Section.Login.Controller.RegisterAC">

    <LinearLayout
        android:id="@+id/register_back_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/twenty_dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:scaleType="centerInside"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/four_eight"
        android:paddingTop="@dimen/ten_dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/login_ic"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_eight"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/four_eight"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/register_phone_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/four_four_dp"
                android:background="@null"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/curse_bg"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/phone"
                android:textColorHint="#FF989898"
                android:textSize="@dimen/fiften_sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="#D8D8D8"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_eight"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/thirty_dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/register_verify_code_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/four_four_dp"
                android:background="@null"
                android:cursorVisible="true"
                android:inputType="number"
                android:maxLength="6"
                android:textCursorDrawable="@drawable/curse_bg"
                android:hint="@string/verify_code"
                android:textColorHint="#FF989898"
                android:textSize="@dimen/fiften_sp"/>
            <LinearLayout
                android:id="@+id/register_get_verify_code_lay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/register_get_verify_code_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/thirty_dp"
                    android:text="@string/get_verify_code"
                    android:textColor="@color/skyblue"
                    android:padding="@dimen/five_dps"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/twenty_sp"
                    android:background="@drawable/table_shape_blue_line_bg"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="#D8D8D8"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_eight"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/register_paw_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/four_four_dp"
                android:background="@null"
                android:cursorVisible="true"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/curse_bg"
                android:hint="@string/input_paw"
                android:textColorHint="#FF989898"
                android:textSize="@dimen/fiften_sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="#D8D8D8"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_four_dp"
            android:background="@drawable/table_shape_button_radio"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/thirty_five"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:text="@string/next"
            android:textSize="@dimen/twenty_spp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_choice"
                android:scaleType="centerInside"/>
            <TextView
                android:id="@+id/regsiter_agree_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_dp"
                android:text="@string/agree"
                android:textColor="#979797"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
