<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginTop="@dimen/four_eight"
        android:weightSum="3"
        android:background="@color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/mine_word_lay"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_resume"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/mine_word"
                android:textColor="#FF222222"
                android:textSize="@dimen/fourteen_sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mine_job_lay"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_want"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/mine_job"
                android:textColor="#FF222222"
                android:textSize="@dimen/fourteen_sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mine_hr_lay"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_recruit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/mine_hr"
                android:textColor="#FF222222"
                android:textSize="@dimen/fourteen_sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/alp_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a0000000"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>